--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="recargasec.com/index.html">
+					<A HREF="paginas/index.html">
 						Tarjetas Google Play Ecuador | RecargasEc.com
 					</A>		
 			</TD>
