--- a/paginas/tarjetas-itunes-ecuador/10/pages.html
+++ b/paginas/tarjetas-itunes-ecuador/10/pages.html
@@ -336,7 +336,7 @@ $(document).ready(function()
 
 
 </center>
-<div class="text-center"><a class="btn btn-info btn-lg" href="../../pedidos.html" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago </a>  <a class="btn btn-lg  btn-info" href="../../como-pagar/6/pages.html" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos para Pagar</a></div>
+<div class="text-center"><a class="btn btn-info btn-lg" href="../../pedidos.html" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago </a>  <a class="btn btn-lg  btn-info" href="https://api.whatsapp.com/send?phone=593983185069&text=quiero%20registrar%20mi%20dep%C3%B3sito" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos para Pagar</a></div>
 <br /><hr />
 <h4 class="text-center text-info">¿Cómo comprar Tarjetas iTunes Apple?</h4>
 <br />
