--- a/paginas/tarjetas-nintendo-ecuador/19/pages.html
+++ b/paginas/tarjetas-nintendo-ecuador/19/pages.html
@@ -338,7 +338,7 @@ $(document).ready(function()
 <br />
 <ol>
 <li>No necesitas tarjeta de crédito.</li>
-<li style="text-align: justify;">Ingresar a  <a href="../../como-pagar/6/pages.html">Como pagar </a> para ver los números de cuentas y realizar depósito o transferencia a nuestra cuenta bancaria.</li>
+<li style="text-align: justify;">Ingresar a  <a href="../../como.html">Como pagar </a> para ver los números de cuentas y realizar depósito o transferencia a nuestra cuenta bancaria.</li>
 <li>Una vez Realizado el pago debe llenar el formulario de pedido  <strong> <a href="../../pedidos.html">Aquí </a> </strong> para que dicho pago sea verificado y tu pedido procesado.</li>
 <li>Recibe tu recarga de inmediato.</li>
 </ol>
