--- a/paginas/pavos-fortnite-ecuador/9/pages.html
+++ b/paginas/pavos-fortnite-ecuador/9/pages.html
@@ -335,7 +335,7 @@ $(document).ready(function()
 		</table>
 		</div></center></center><br /><span style="color: #00ccff; font-size: 18px;"> <strong>* Tiempo: </strong> </span> En minutos.
 <p><span style="color: #e91e63; font-size: 18px;"><strong> NOTA: </strong> </span> <strong> Tarjeta digital para todas las Plataformas :) PC / PlayStation / Nintendo Switch, Xbox. Etc. No pediremos tus datos de acceso al juego.<!--SI JUEGAS EN PS4 ES NECESARIO QUE INGRESES DESDE UNA PC CON TU CUENTA PARA PODER VER TUS PAVOS DISPONIBLES Y COMPRAR LAS SKINS O BAILES, LAS COMPRAS REALIZADAS SI APARECEN EN LA PLAY STATION 4. --></strong></p>
-<div class="text-center"><a class="btn btn-info btn-lg" href="../../pedidos.html" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago</a> <a class="btn btn-lg  btn-info" href="../../como-pagar/6/pages.html" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos para Pagar</a></div>
+<div class="text-center"><a class="btn btn-info btn-lg" href="../../pedidos.html" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago</a> <a class="btn btn-lg  btn-info" href="https://api.whatsapp.com/send?phone=593983185069&text=quiero%20registrar%20mi%20dep%C3%B3sito" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos para Pagar</a></div>
 <br /><hr />
 <h4 class="text-center text-info">¿Cómo recargar PaVos Fortnite en Ecuador?</h4>
 <br />
