--- a/paginas/pavos-fortnite/9/pages.html
+++ b/paginas/pavos-fortnite/9/pages.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="shortcut icon" type="image/png" href="../../core/views/templates/recargasec/resources/img/favicon.ico"/>
-      <title>PaVos Fortnite Ecuador facílmente, paga en banco locales, y adquiere tus Pavos pase de Batalla Fornite. | RecargasEc.com</title>
+      <title>PaVos Fortnite Ecuador facílmente, paga en banco locales, y adquiere tus Pavos pase de Batalla Fornite.</title>
  
   <link rel="dns-prefetch" href="https://www.google-analytics.com/">
 <link rel="dns-prefetch" href="https://www.googletagmanager.com/">
@@ -175,21 +175,8 @@ body{padding-top: 62px;}
                     <a  class="dropdown-item" href="../../unknown-cash-pubg-mobile/20/pages.html">Unknown Cash de PUBG Mobile</a>
                 </div>
             </li>
-            <li class='nav-item active'><a class='nav-link' href='../../como-pagar/6/pages.html' >¿Cómo Pagar?</a></li>
-            <li class="nav-item active dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="pedidos01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pedidos</a>
-			     <div class="dropdown-menu" aria-labelledby="pedidos01">
-                    <a  class="dropdown-item" href="../../pedidos.html">Reportar Pago</a>
-                                        <a  class="dropdown-item" href="../../mispedidos.html">Mis Pedidos</a>
-                   
-                </div>
-            </li>
-            
- <!--?vst=contactform -->
-			<li class="nav-item active"><a class="nav-link" target="_blank" href='http://m.me/RecargasecYmas'>Contacto</a></li>
-
-                    <li class="nav-item active"><a class="nav-link btn btn-success" href="../../registro.html"><i class="fas fa-user small"></i> Registrarse<span class="sr-only">(current)</span></a></li><li class="nav-item"><a class="nav-link" href="../../milogin.html">Iniciar Sesión</a></li>
-            <!--
+            <li class='nav-item active'><a class='nav-link' href='../../como.html' >¿Cómo Pagar?</a></li>
+ <!--
 			<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="dropdown02" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
 					<div class="dropdown-menu" aria-labelledby="dropdown02">
@@ -335,17 +322,9 @@ $(document).ready(function()
 		</table>
 		</div></center></center><br /><span style="color: #00ccff; font-size: 18px;"> <strong>* Tiempo: </strong> </span> En minutos.
 <p><span style="color: #e91e63; font-size: 18px;"><strong> NOTA: </strong> </span> <strong> Tarjeta digital para todas las Plataformas :) PC / PlayStation / Nintendo Switch, Xbox. Etc. No pediremos tus datos de acceso al juego.<!--SI JUEGAS EN PS4 ES NECESARIO QUE INGRESES DESDE UNA PC CON TU CUENTA PARA PODER VER TUS PAVOS DISPONIBLES Y COMPRAR LAS SKINS O BAILES, LAS COMPRAS REALIZADAS SI APARECEN EN LA PLAY STATION 4. --></strong></p>
-<div class="text-center"><a class="btn btn-info btn-lg" href="../../pedidos.html" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago</a> <a class="btn btn-lg  btn-info" href="../../como-pagar/6/pages.html" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos para Pagar</a></div>
+<div class="text-center"><a class="btn btn-info btn-lg" href="https://api.whatsapp.com/send?phone=593983185069&text=quiero%20registrar%20mi%20dep%C3%B3sito" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago</a> <a class="btn btn-lg  btn-info" href="https://api.whatsapp.com/send?phone=593983185069&text=necesito%20infromacion" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos para Pagar</a></div>
 <br /><hr />
-<h4 class="text-center text-info">¿Cómo recargar PaVos Fortnite en Ecuador?</h4>
-<br />
-<ol>
-<li>No necesitas tarjeta de crédito.</li>
-<li style="text-align: justify;">Ingresar a <a href="../../como-pagar/6/pages.html">Como pagar</a> para ver los números de cuentas y realizar depósito o transferencia a nuestra cuenta bancaria.</li>
-<li>Una vez Realizado el pago debe llenar el formulario de pedido <strong><a href="../../pedidos.html">Aquí </a> </strong> para que dicho pago sea verificado y tu pedido procesado.</li>
-<li>Recibe tu recarga de inmediato.</li>
-</ol>
-<br /><hr />
+
 <h4 class="text-center text-info">¿Cómo canjear las tarjetas de PaVos Fortnite en Ecuador?</h4>
 <br />
 <ol>
