--- a/paginas/riot-points-league-of-legends/14/pages.html
+++ b/paginas/riot-points-league-of-legends/14/pages.html
@@ -348,7 +348,7 @@ $(document).ready(function()
 <p style="-webkit-tap-highlight-color: transparent; margin-right: 0px; margin-bottom: 15px; margin-left: 0px; font-size: 18px; line-height: 1.618; color: #3c4858; font-family: Roboto, Helvetica, Arial, sans-serif; text-align: center;"></p>
 <p><span style="color: #00ccff; font-size: 18px;"><strong>* Tiempo: </strong> </span> Inmediato.</p>
 <p><span style="color: #00ccff; font-size: 18px;"><span style="font-weight: bolder;">* Región: </span></span>LATAM (LAN / LAS).</p>
-<div class="text-center"><a class="btn btn-info btn-lg" href="../../pedidos.html" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago</a> <a class="btn btn-lg  btn-info" href="../../como-pagar/6/pages.html" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos de Pago</a></div>
+<div class="text-center"><a class="btn btn-info btn-lg" href="../../pedidos.html" style="background-color: #e91e63; border-color: #e91e63;">Reportar mi pago</a> <a class="btn btn-lg  btn-info" href="https://api.whatsapp.com/send?phone=593983185069&text=quiero%20registrar%20mi%20dep%C3%B3sito" role="button" style="background-color: #e91e44; border-color: #e91e63;">Ver Datos de Pago</a></div>
 <br /><hr />
 <h4 class="text-center text-info">¿Cómo comprar Riot Points de League Of Legends en Ecuador?</h4>
 <ol>
