--- a/paginas/index.html
+++ b/paginas/index.html
@@ -590,7 +590,7 @@ $(document).ready(function()
       
       <div class="col-xs-12 col-md-3 text-center">
         <div>
-          <!--<div style="color: #57abb5;">
+          <div style="color: #57abb5;">
             <br />
             <img src="https://recargasec.com/core/views/templates/recargasec/resources/img/servicios/robux-roblox.jpg"/>
           </div>
@@ -602,7 +602,7 @@ $(document).ready(function()
           <p class="text-muted" style="font-size: 16px;">Recarga Robux en Roblox y disfruta de los mejores Skins y objetos.
           </p>
           <a class="btn btn-lg  btn-info" style="background-color: #e91e63; border-color: #e91e63;" href="robux-roblox-ecuador/17/pages" role="button">Quiero Roblox
-          </a><br /><hr />-->
+          </a><br /><hr />
         </div>
       </div>
     </div>
