--- a/paginas/index.html
+++ b/paginas/index.html
@@ -137,7 +137,7 @@ body{padding-top: 62px;}
 
 		<!-- Brand and toggle get grouped for better mobile display -->
 
-		  <a class="navbar-brand" href="index.html" MK-animatedOver="tada"><img src="core/views/templates/recargasec/resources/img/logonavbar.png"  width="40" height="40" title="RecargasEc.com"/> </a>
+		  <a class="navbar-brand" href="index.html" MK-animatedOver="tada"><img src="core/views/templates/recargasec/resources/img/logonavbar.png"  width="40" height="40" title="EL LOBBY"/> </a>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="IZSnavbar">
@@ -587,12 +587,12 @@ $(document).ready(function()
         </div>
       </div>
       </a>
-      
+
       <div class="col-xs-12 col-md-3 text-center">
         <div>
           <div style="color: #57abb5;">
             <br />
-            <img src="https://recargasec.com/core/views/templates/recargasec/resources/img/servicios/robux-roblox.jpg"/>
+            <img src="../../recargas/paginas/core/views/templates/recargasec/resources/img/servicios/net1.jpg"/>
           </div>
           <a class="text-dark" style="text-decoration: none;" href="robux-roblox-ecuador/17/pages"> 
             <br />
@@ -601,7 +601,7 @@ $(document).ready(function()
           </h4>
           <p class="text-muted" style="font-size: 16px;">Recarga Robux en Roblox y disfruta de los mejores Skins y objetos.
           </p>
-          <a class="btn btn-lg  btn-info" style="background-color: #e91e63; border-color: #e91e63;" href="robux-roblox-ecuador/17/pages" role="button">Quiero Roblox
+          <a class="btn btn-lg  btn-info" style="background-color: #e91e63; border-color: #e91e63;" href="https://api.whatsapp.com/send?phone=593983185069&text=hola%20necesito%20Netlfix" role="button">Quiero NetFlix
           </a><br /><hr />
         </div>
       </div>
