--- a/paginas/index7474.html
+++ b/paginas/index7474.html
@@ -136,7 +136,7 @@ body{padding-top: 62px;}
 
 		<!-- Brand and toggle get grouped for better mobile display -->
 
-		  <a class="navbar-brand" href="index.html" MK-animatedOver="tada"><img src="core/views/templates/recargasec/resources/img/logonavbar.png"  width="40" height="40" title="RecargasEc.com"/> </a>
+		  <a class="navbar-brand" href="index.html" MK-animatedOver="tada"><img src="core/views/templates/recargasec/resources/img/logonavbar.png"  width="40" height="40" title="EL LOBBY"/> </a>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="IZSnavbar">
@@ -269,7 +269,7 @@ $(document).ready(function()
 <input type='Password' id='Password' name='Password' class='form-control' value='' maxlength='50' Desc='Password' Required='1' placeholder='ContraseÃ±a'>
 <input type='submit' id='Submit' name='Submit' class='btn btn-lg btn-primary btn-block' value='Entrar' Desc=''>
    
-			<a href='registro.html'>¿No tienes cuenta? Registrate</a>
+			<a href='registro.html'>ï¿½No tienes cuenta? Registrate</a>
                     <div class="row">
     				  <div class="checkbox col-sm-6" align="left">
     					  <label>
