--- a/paginas/tarjetas-steam-ecuador/18/pages.html
+++ b/paginas/tarjetas-steam-ecuador/18/pages.html
@@ -137,7 +137,7 @@ body{padding-top: 62px;}
 
 		<!-- Brand and toggle get grouped for better mobile display -->
 
-		  <a class="navbar-brand" href="../../index.html" MK-animatedOver="tada"><img src="../../core/views/templates/recargasec/resources/img/logonavbar.png"  width="40" height="40" title="RecargasEc.com"/> </a>
+		  <a class="navbar-brand" href="../../index.html" MK-animatedOver="tada"><img src="../../core/views/templates/recargasec/resources/img/logonavbar.png"  width="40" height="40" title="EL LOBBY"/> </a>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="IZSnavbar">
