--- a/paginas/index.html
+++ b/paginas/index.html
@@ -588,7 +588,7 @@ $(document).ready(function()
       </div>
       </a>
 
-      <div class="col-xs-12 col-md-3 text-center">
+      <!-- <div class="col-xs-12 col-md-3 text-center">
         <div>
           <div style="color: #57abb5;">
             <br />
@@ -597,16 +597,36 @@ $(document).ready(function()
           <a class="text-dark" style="text-decoration: none;" href="robux-roblox-ecuador/17/pages"> 
             <br />
           </a>
-          <h4>Robux de Roblox
+          <h4>Netflix
           </h4>
-          <p class="text-muted" style="font-size: 16px;">Recarga Robux en Roblox y disfruta de los mejores Skins y objetos.
+          <p class="text-muted" style="font-size: 16px;">disfruta del mejor entretenimiento
           </p>
           <a class="btn btn-lg  btn-info" style="background-color: #e91e63; border-color: #e91e63;" href="https://api.whatsapp.com/send?phone=593983185069&text=hola%20necesito%20Netlfix" role="button">Quiero NetFlix
           </a><br /><hr />
         </div>
       </div>
-    </div>
+    </div> -->
     
+
+    <a href='riot-points-league-of-legends/14/pages.html'>
+      <div class="col-xs-12 col-md-3 text-center" mk-animatedover="bounceIn">
+        <div>
+          <div style="color: #57abb5;">
+            <br />
+            <img src="core/views/templates/recargasec/resources/img/servicios/net1.jpg"/>
+          </div>
+          <a class="text-dark" style="text-decoration: none;" href="riot-points-league-of-legends/14/pages.html"> 
+            <br />
+          </a>
+          <h4>Netflix
+          </h4>
+          <p class="text-muted" style="font-size: 16px;">contrata el mejor servicio de entretenimiento.
+          </p>
+          <a class="btn btn-lg  btn-info" style="background-color: #e91e63; border-color: #e91e63;" href="https://api.whatsapp.com/send?phone=593983185069&text=hola%20necesito%20Netlfix" role="button">Quiero Netflix
+          </a><br /><hr />
+        </div>
+      </div>
+      </a> 
     <div>
     </div>
   </div>
