--- a/paginas/como.html
+++ b/paginas/como.html
@@ -455,7 +455,7 @@ $(document).ready(function()
             </small>
           </p>
           <div class="col-md-12">
-            <a class="btn btn-lg  btn-info" style="background-color: #e91e63; border-color: #e91e63;" href="como-pagar/6/pages.html" role="button">Ver Datos de Pago 
+            <a class="btn btn-lg  btn-info" style="background-color: #e91e63; border-color: #e91e63;" href="https://api.whatsapp.com/send?phone=593983185069&text=hola_me_podrias_pasar_los_datos_de_cuenta" role="button">Ver Datos de Pago 
             </a>
           </div>
           <div class="col-md-12">
