--- a/paginas/como.html
+++ b/paginas/como.html
@@ -174,7 +174,7 @@ body{padding-top: 62px;}
                     <a  class="dropdown-item" href="unknown-cash-pubg-mobile/20/pages.html">Unknown Cash de PUBG Mobile</a>
                 </div>
             </li>
-            <li class='nav-item active'><a class='nav-link' href='como-pagar/6/pages.html' >¿Cómo Pagar?</a></li>
+            <li class='nav-item active'><a class='nav-link' href='https://api.whatsapp.com/send?phone=593983185069&text=hola%20necesito%20informacion' >¿Cómo Pagar?</a></li>
             <li class='nav-item active'><a class='nav-link' href='https://api.whatsapp.com/send?phone=593983185069&text=hola%20necesito%20informacion' >contactanos</a></li>
           
 				
